add example release information

--- a/rebar.config
+++ b/rebar.config
@@ -1,5 +1,7 @@
 %%-*- mode: erlang -*-
 
+{sub_dirs, ["rel"]}.
+{lib_dirs, ["deps"]}.
 {deps, [
   {eredis, ".", {git, "git://github.com/wooga/eredis.git", "master"}},
   {ibrowse, ".", {git, "git://github.com/cmullaparthi/ibrowse.git", "master"}},
